--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ header {
 }
 .right-container h1 {
   text-align: center;
-  color: rgb(0, 126, 0);
+  color: #303D1D;
   margin-bottom: 1em;
   margin-top: 4em;
   font-size: 40px;
@@ -112,23 +112,25 @@ header {
 }
 .right-container form .sign-up {
   padding: 15px 65px;
-  border-radius: 10px;
+  border-radius: 50px;
   border: none;
-  background-color: #189e45;
+  background-color: #303D1D;
   color: #fff;
   font-weight: 600;
   font-size: 16px;
   cursor: pointer;
+  text-decoration: none;
 }
 .right-container form .sign-in {
   padding: 15px 65px;
-  border-radius: 10px;
-  border: 2px solid #189e45;
+  border-radius: 50px;
+  border: 2px solid #303D1D;
   background-color: transparent;
-  color: #189e45;
+  color: #303D1D;
   font-weight: 600;
   font-size: 16px;
   cursor: pointer;
+  text-decoration: none;
 }
 .terms {
   text-align: left;
@@ -141,7 +143,7 @@ header {
 }
 
 span {
-  color: #189e45;
+  color: #303D1D;
 }
 
 .buttons-mobile {
@@ -240,23 +242,21 @@ span {
     display: block;
   }
   .buttons-mobile .sign-up-mobile {
-    padding: 15px;
+    padding: 15px 80px;
     width: 80%;
-    border-radius: 10px;
+    border-radius: 50px;
     border: none;
-    background-color: #189e45;
+    background-color: #303D1D;
     color: #fff;
     font-weight: 600;
     font-size: 18px;
     cursor: pointer;
+    text-decoration: none;
   }
   .buttons-mobile .sign-in-mobile {
-    padding: 15px;
-    width: 80%;
     border-radius: 10px;
     border: none;
-    background-color: #ffffff;
-    color: #189e45;
+    color: #303D1D;
     font-weight: 600;
     font-size: 18px;
     cursor: pointer;
@@ -289,11 +289,12 @@ span {
     font-size: 18px;
     font-weight: bold;
     margin-top: 30px;
-    border-radius: 10px;
-    background-color: #189e45;
+    border-radius: 50px;
+    background-color: #303D1D;
     border: none;
     outline: none;
     color: #fff;
+    text-decoration: none;
   }
   .sign-up-container .sign_in {
     text-align: center;
